main file changed

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
 			<a href="BubbleSort/index.html">BubbleSort</a><br>
 			<a href="Calculator/index.html">Calculator</a><br>
+			<a href="Miner/index.html">Miner</a><br>
     </body>
 </html>
